# automate-sfpack-sfark

./: README.md
src/: .gitignore  automated_common.py  automated_sfark_compress.py  automated_sfark_decompress.py  automated_sfpack_decompress.py  automated_sfpack_unpack.py  pyproject.toml
src/test/resources/sfpack/: 02timgm6mb_n0_l0.sfpack  02timgm6mb_n0_l1.sfpack  02timgm6mb_n1_l0.sfpack  02timgm6mb_n1_l1.sfpack
