

[project]
name = "automate-sfpack-sfark"
version = "0.5"
authors = [
  { name="Ben Fisher", email="shinerainseven@gmail.com" },
]
license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]
description = "Batch-convert soundfonts between sf2, sfpack, and sfark formats"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "shinerainsevenlib",
  "pywinauto",
]

[project.urls]
Homepage = "https://github.com/moltenform/automate-sfpack-sfark"
Issues = "https://github.com/moltenform/automate-sfpack-sfark/issues"


[tool.shinerainsevenlib]
config_collection_legacy = 1
pylint_import_suggested_other_settings = 1
rufflint_import_suggested_other_settings = 1

rufflint_ignore = [
]

pylint_specific_ignore_containing = [
    # skip this - we don't care about it for Bucket
    "E1101: Instance of 'Bucket' has no",
    # skip this - we don't care about it for fixtures
    "W0621: Redefining name 'fixture_",
    "Access to a protected member _get of",
    "Access to a protected member _get_id of",
]

rufflint_specific_ignore_containing = [
]

format_skip_if_path_contains = [
    '/OUTSIDE/'
]

[project.optional-dependencies]
dev = [
    "pylint",
    "ruff",
    "pytest",
    "pytest-mock",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py38"

[tool.ruff.lint]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"


[tool.pylint.'MESSAGES CONTROL']

[tool.yapf]

# styles: google, pep8, yapf, facebook
based_on_style = "facebook"
spaces_before_comment = 1
split_before_logical_operator = false
column_limit = 120
indent_width = 4

